--- a/web/css/workflow.less
+++ b/web/css/workflow.less
@@ -11,6 +11,7 @@
   color: black;
   font-family: helvetica;
   padding: 0.5em;
+  min-width: 5em;
   margin: 10px;
   font-size: 0.9em;
 
@@ -31,7 +32,6 @@
   overflow: auto;
 
   .node {
-    min-width: 5em;
     height: 5em;
     line-height: 5em;
     position: absolute;
@@ -39,7 +39,7 @@
     padding: 0.5em 1em;
     cursor: pointer;
     margin: 0;
-    z-index: 20 !important;
+    z-index: 20;
 
     &:hover {
       z-index: 21 !important;
@@ -70,7 +70,7 @@
   .endpoint {
     z-index: 22;
     cursor: move;
-    &:after {
+    &:after { // for padding
       position: absolute;
       visibility: hidden;
       content: ' ';
